# multi-swe-bench

./: .gitignore  .pre-commit-config.yaml  LICENSE  LOCAL_README.md  Makefile  README.md  config.json  download.py  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
docs/: build-dataset-quick-start.md  contribution-demo.md  contribution-incentive-plan.md
docs/manual-verification/annotation-results/: README.md  c++.xlsx  c.xlsx  go.xlsx  java.xlsx  js.xlsx  rust.xlsx  ts.xlsx
multi_swe_bench/collect/: build_dataset.py  build_dataset_from_repos.py  crawl_repos.py  filter_prs.py  get_all_prs.py  get_from_repos_pipeline.py  get_pipeline.py  get_related_issues.py  merge_prs_with_issues.py  util.py
multi_swe_bench/harness/: build_dataset.py  constant.py  dataset.py  gen_report.py  image.py  instance.py  prebuild_envagent_images.py  pull_request.py  report.py  run_evaluation.py  test_result.py
multi_swe_bench/harness/repos/: __init__.py
multi_swe_bench/harness/repos/cpp/: __init__.py
multi_swe_bench/harness/repos/csharp/: __init__.py
multi_swe_bench/harness/repos/golang/: __init__.py
multi_swe_bench/harness/repos/java/: __init__.py
multi_swe_bench/harness/repos/javascript/: __init__.py
multi_swe_bench/harness/repos/kotlin/: __init__.py
multi_swe_bench/utils/: args_util.py  docker_util.py  env_to_dockerfile.py  fs_utils.py  git_util.py  logger.py  meta_info.py  python_test.py  session_util.py
scripts/: download_images.ps1  download_images.sh  images_mini.txt  images_rl.txt  images_verified.txt
(+1736 files in other folders)
